[package]
name = "w3-audit-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
w3io-audit-core = { git = "https://github.com/w3-io/protocol.git", branch = "audie/w3-action-primitives" }

[profile.release]
opt-level = "s"
lto = true
