[package]
name = "w3-http-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
w3io-http-core = { git = "https://github.com/w3-io/protocol.git", branch = "master" }

[profile.release]
opt-level = "s"
lto = true
